--- a/lib/quizzaz_web/live/play_live/index.html.heex
+++ b/lib/quizzaz_web/live/play_live/index.html.heex
@@ -70,6 +70,42 @@
               </div>
             <% end %>
           </div>
+        <% %Quizzaz.Games.Questions.Survey{} = q -> %>
+          <div class="flex flex-row items-center gap-4 h-screen">
+            <%= for two_choices <- Enum.chunk_every(q.choices, 2) do %>
+              <div class="flex flex-col items center gap-4 w-[45vw]">
+                <%= for choice <- two_choices do %>
+                  <button
+                    class="p-12 bg-skin-secondary rounded-xl text-skin-primary font-bold text-xl md:text-3xl lg:text-5xl text-center h-[45vh]"
+                    phx-click="answer_question"
+                    phx-value-answer={choice}
+                  >
+                    <%= choice %>
+                  </button>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
+        <% %Quizzaz.Games.Questions.Drawing{} -> %>
+          <p class="font-bold text-xl lg:text-3xl text-skin-primary mt-8">Draw a picture</p>
+          <.live_component module={QuizzazWeb.PlayLive.DrawingComponent} id="drawing-component" />
+          <button id="answer-drawing" class="m-4 flex flex-col items-center">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-8 w-8 text-skin-secondary"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"
+              />
+            </svg>
+            <p class="font-bold text-xl lg:text-3xl text-skin-primary">Submit Drawing</p>
+          </button>
         <% %Quizzaz.Games.Questions.OpenEnded{} -> %>
           <.form let={f} for={:open_ended_answer} phx-submit="answer_question">
             <div class="flex flex-col items-center gap-4 my-4 lg:my-12 text-skin-primary font-bold">
