--- a/lib/quizzaz_web/templates/layout/app.html.heex
+++ b/lib/quizzaz_web/templates/layout/app.html.heex
@@ -1,5 +1,7 @@
 <main>
   <p class="alert alert-info text-center m-auto" role="alert"><%= get_flash(@conn, :info) %></p>
-  <p class="alert alert-danger text-center m-auto" role="alert"><%= get_flash(@conn, :error) %></p>
+  <p class="alert alert-danger text-center m-auto" role="alert">
+    <%= get_flash(@conn, :error) %>
+  </p>
   <%= @inner_content %>
 </main>
