--- a/lib/quizzaz_web/templates/user_registration/new.html.heex
+++ b/lib/quizzaz_web/templates/user_registration/new.html.heex
@@ -1,6 +1,8 @@
 <div class="flex flex-col items-center my-8 text-center">
   <div class="flex flex-col w-3/4 items-center justify-around mx-20 bg-skin-secondary rounded-lg p-4 text-skin-primary font-bold">
-    <h2 class="text-xl lg:text-3xl text-left lg:text-center p-2 lg:p-8">Sign up to start creating your own games!</h2>
+    <h2 class="text-xl lg:text-3xl text-left lg:text-center p-2 lg:p-8">
+      Sign up to start creating your own games!
+    </h2>
     <.form
       let={f}
       for={@changeset}
