--- a/lib/quizzaz_web/templates/user_settings/edit.html.heex
+++ b/lib/quizzaz_web/templates/user_settings/edit.html.heex
@@ -72,14 +72,19 @@
       ) %>
       <%= error_tag(f, :password) %>
 
-      <%= label(f, :password_confirmation, "Confirm new password", class: "text-skin-secondary pb-2") %>
+      <%= label(f, :password_confirmation, "Confirm new password",
+        class: "text-skin-secondary pb-2"
+      ) %>
       <%= password_input(f, :password_confirmation,
         required: true,
         class: "rounded-lg mb-4 mx-2 text-skin-input font-bold text-lg lg:w-1/3"
       ) %>
       <%= error_tag(f, :password_confirmation) %>
 
-      <%= label(f, :current_password, for: "current_password_for_password", class: "text-skin-secondary pb-2") %>
+      <%= label(f, :current_password,
+        for: "current_password_for_password",
+        class: "text-skin-secondary pb-2"
+      ) %>
       <%= password_input(f, :current_password,
         required: true,
         name: "current_password",
