--- a/lib/quizzaz_web/live/host_live/index.html.heex
+++ b/lib/quizzaz_web/live/host_live/index.html.heex
@@ -34,7 +34,7 @@
           <p class="font-bold text-xl lg:text-3xl">Start Game</p>
         </button>
         <.form
-          let={f}
+          :let={f}
           for={:select_duration}
           phx-change="select_duration"
           class="flex flex-col items-center w-full"
