--- a/lib/quizzaz_web/templates/layout/app.html.heex
+++ b/lib/quizzaz_web/templates/layout/app.html.heex
@@ -1,7 +1,5 @@
 <main>
-  <p class="alert alert-info text-center m-auto" role="alert"><%= get_flash(@conn, :info) %></p>
-  <p class="alert alert-danger text-center m-auto" role="alert">
-    <%= get_flash(@conn, :error) %>
-  </p>
+  <p class="alert alert-info text-center m-auto" role="alert" phx-no-format><%= Phoenix.Flash.get(@flash, :info) %></p>
+  <p class="alert alert-danger text-center m-auto" role="alert" phx-no-format><%= Phoenix.Flash.get(@flash, :error) %></p>
   <%= @inner_content %>
 </main>
