--- a/lib/quizzaz_web/templates/layout/game.html.heex
+++ b/lib/quizzaz_web/templates/layout/game.html.heex
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <%= csrf_meta_tag() %>
-    <%= live_title_tag(assigns[:page_title] || "Quizzaz", suffix: " · Phoenix Framework") %>
+    <.live_title suffix=" . Fun For All">
+      <%= assigns[:page_title] || "Quizzaz" %>
+    </.live_title>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")} />
     <script
       defer
