--- a/lib/quizzaz_web/templates/user_reset_password/edit.html.heex
+++ b/lib/quizzaz_web/templates/user_reset_password/edit.html.heex
@@ -1,6 +1,6 @@
 <h1>Reset password</h1>
 
-<.form let={f} for={@changeset} action={Routes.user_reset_password_path(@conn, :update, @token)}>
+<.form :let={f} for={@changeset} action={Routes.user_reset_password_path(@conn, :update, @token)}>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
@@ -21,6 +21,7 @@
 </.form>
 
 <p>
-  <%= link("Register", to: Routes.user_registration_path(@conn, :new)) %> |
-  <%= link("Log in", to: Routes.user_session_path(@conn, :new)) %>
+  <%= link("Register", to: Routes.user_registration_path(@conn, :new)) %> | <%= link("Log in",
+    to: Routes.user_session_path(@conn, :new)
+  ) %>
 </p>
