--- a/lib/quizzaz_web/templates/user_reset_password/new.html.heex
+++ b/lib/quizzaz_web/templates/user_reset_password/new.html.heex
@@ -1,6 +1,6 @@
 <h1>Forgot your password?</h1>
 
-<.form let={f} for={:user} action={Routes.user_reset_password_path(@conn, :create)}>
+<.form :let={f} for={:user} action={Routes.user_reset_password_path(@conn, :create)}>
   <%= label(f, :email, class: "input-label") %>
   <%= email_input(f, :email, required: true) %>
 
@@ -10,6 +10,7 @@
 </.form>
 
 <p>
-  <%= link("Register", to: Routes.user_registration_path(@conn, :new)) %> |
-  <%= link("Log in", to: Routes.user_session_path(@conn, :new)) %>
+  <%= link("Register", to: Routes.user_registration_path(@conn, :new)) %> | <%= link("Log in",
+    to: Routes.user_session_path(@conn, :new)
+  ) %>
 </p>
