--- a/lib/quizzaz_web/templates/user_session/new.html.heex
+++ b/lib/quizzaz_web/templates/user_session/new.html.heex
@@ -1,7 +1,7 @@
 <div class="flex flex-col items-center my-8 text-center">
   <div class="flex flex-col w-3/4 items-center justify-around mx-20 bg-skin-secondary rounded-lg p-4 text-skin-primary font-bold">
     <.form
-      let={f}
+      :let={f}
       for={@conn}
       action={Routes.user_session_path(@conn, :create)}
       as={:user}
