--- a/lib/quizzaz_web/templates/user_settings/edit.html.heex
+++ b/lib/quizzaz_web/templates/user_settings/edit.html.heex
@@ -1,7 +1,7 @@
 <div class="flex flex-col items-center my-8 text-center">
   <div class="flex flex-col w-3/4 items-center justify-around mx-20 bg-skin-secondary rounded-lg p-4 text-skin-primary font-bold">
     <.form
-      let={f}
+      :let={f}
       for={@email_changeset}
       action={Routes.user_settings_path(@conn, :update)}
       id="update_email"
@@ -51,7 +51,7 @@
     </.form>
 
     <.form
-      let={f}
+      :let={f}
       for={@password_changeset}
       action={Routes.user_settings_path(@conn, :update)}
       id="update_password"
